# rte_example_project

./: .cproject  .gitlab-ci.yml  .gitmodules  .project  CMakeLists.txt  README.md
.github/workflows/: build.yml
demolib/: .cproject  .project  CMakeLists.txt
demolib/model/: demolib.ovf  demolib.ovm
demolib/source/: Add.c  Mul.c  Rampe.c  Sinus.c  demolib_add.c  demolib_sinus.c
model/: demolib.ovm
source/: Mul.c  Rampe.c  demolib_mul.c  demolib_rampe.c
